added fading effect (to be re-worked)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ effects/WaitCommand.cpp
 effects/FlashingPattern.cpp
 effects/PatternBase.cpp
 effects/StaticPattern.cpp
+effects/FadingPattern.cpp
 )
 
 
