--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,8 @@ pico_enable_stdio_usb(7902-LED-MODULE 1)
 # Add the standard library to the build
 target_link_libraries(7902-LED-MODULE
         pico_stdlib
-        pico_multicore)
+        pico_multicore
+        hardware_watchdog)
 
 #set(PICO_DEFAULT_BINARY_TYPE no_flash)
 
